:construction: wip: fix output styles and white spaces in bash-scripting course

--- a/src/components/Output/styles.module.css
+++ b/src/components/Output/styles.module.css
@@ -1,8 +1,8 @@
 .code {
-    display: block;
-    background-color: rgb(211, 207, 211);
-    color: rgb(26, 21, 21) ;
-    padding: 1em ;
-    border-radius: 4px;
-    border: 2px solid black ;
+  display: block;
+  background-color: rgb(245, 228, 245);
+  color: rgb(26, 21, 21);
+  padding: 1em;
+  border-radius: 4px;
+  border: 2px solid black;
 }
